// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Catalog /> renders an error if loading failed 1`] = `
<div
  className="Catalog"
>
  <p>
    Oops, Failed to load list!
  </p>
</div>
`;

exports[`<Catalog /> renders the <CatalogList /> if loading was successful 1`] = `
<div
  className="Catalog"
>
  <div
    className="CatalogList"
  >
    <h4>
      Catalog List
    </h4>
    <ul>
      <li>
        <a
          href="/wo/1"
          onClick={[Function]}
        >
          Welly
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Catalog /> renders the loading status if data invalid 1`] = `
<div
  className="Catalog"
>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<Catalog /> renders the loading status if requesting data 1`] = `
<div
  className="Catalog"
>
  <p>
    Loading...
  </p>
</div>
`;
